<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulFondo"
    tools:context=".ListAlarmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:contentDescription="@string/description_background_logo"
            app:srcCompat="@drawable/pajarito"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/actual_time"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary30"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/time_wakeup"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/alarms"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary30"
                android:textColorLink="@color/colorPrimary30"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C8FFFFFF"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="93dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/wakeup"
                android:contentDescription="@string/description_background"/>

            <LinearLayout
                android:layout_width="163dp"
                android:layout_height="64dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/wakeup"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:text="@string/alarm_wakeup"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textColorLink="@color/colorPrimaryBlack"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonComplete"
                android:layout_width="140dp"
                android:layout_height="39dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_complete_rounded_corners"
                android:backgroundTint="@color/colorPrimary60"
                android:elegantTextHeight="true"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/complete"
                android:textAllCaps="false"
                android:textColor="@color/blancoExito"
                android:textSize="16sp"
                app:cornerRadius="16dp"
                app:icon="@android:drawable/checkbox_on_background"
                app:iconTint="@color/blancoExito" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>