<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C8FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="93dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:src="@drawable/pajarito"
            android:contentDescription="@string/description_background"/>

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/wakeup"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/alarm_wakeup"
                android:textColorLink="@color/colorPrimaryBlack"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonComplete"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary60"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/complete"
            android:textSize="14sp"
            app:cornerRadius="9dp"
            app:icon="@android:drawable/checkbox_on_background"
            app:iconTint="@color/blancoExito" />
    </LinearLayout>

</FrameLayout>