<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteActivity"
    android:background="@color/azulFondo">

    <FrameLayout
        android:layout_width="469dp"
        android:layout_height="727dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.2"
            app:srcCompat="@drawable/pajarito"
            tools:visibility="visible"
            android:contentDescription="@string/description_background_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/actual_time"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary30"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/time_wakeup"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/tasks"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary30"
                android:textColorLink="@color/colorPrimary30"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:buttonTint="@color/colorPrimary60"
                    android:fontFamily="@font/nunito"
                    android:text="@string/task_1"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:buttonTint="@color/colorPrimary60"
                    android:fontFamily="@font/nunito"
                    android:text="@string/task_2"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:buttonTint="@color/colorPrimary60"
                    android:fontFamily="@font/nunito"
                    android:text="@string/task_3"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>


        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>