<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary70"
    tools:context=".ListAlarmActivity">

    <FrameLayout
        android:layout_width="469dp"
        android:layout_height="727dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/description_background_logo"
            app:srcCompat="@drawable/background_alarms"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/wake_up"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary30"
                    android:textSize="42sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="220dp"
                    android:layout_height="280dp"
                    android:baselineAlignBottom="false"
                    app:srcCompat="@drawable/wakeup" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/time_wakeup"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary30"
                android:textSize="38sp" />

            <LinearLayout
                android:layout_width="260dp"
                android:layout_height="151dp"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:duplicateParentState="false"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_bold"
                    android:maxLines="2"
                    android:text="@string/message_postpone"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary30"
                    android:textSize="26sp" />

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>