<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary70"
    tools:context=".GameCorrectPatternActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/correct_sequence"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary30"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/try_game"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary30"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="392dp"
            android:layout_height="119dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="#49ABFA"
                android:text=" " />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGame" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGame" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="392dp"
            android:layout_height="119dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGame"
                android:text=" " />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="#49ABFA" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGame" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="392dp"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGame"
                android:text=" " />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="#49ABFA" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGame" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="392dp"
            android:layout_height="119dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGame"
                android:text=" " />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGame" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:backgroundTint="#49ABFA" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="371dp"
            android:layout_height="139dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/wake_up"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary30"
                android:textSize="34sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>